--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
     "react-social-icons": "^6.18.0",
     "swiper": "^11.1.15"
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
