--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@fontsource/metropolis": "^5.1.0",
+    "framer-motion": "^12.0.1",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-social-icons": "^6.18.0",
     "swiper": "^11.1.15"
   },
