--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/metropolis": "^5.1.0",
     "framer-motion": "^12.0.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
