--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/metropolis": "^5.1.0",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.0",
